# GenAI-Verity

./: .Dockerignore  .coveragerc  .env.sample  .gitignore  Dockerfile  README.md  app.py  main.py  main.tf  poc_verity_app.py  providers.tf  pyproject.toml  rules.txt
.github/workflows/: aws.yml  ci.yml  connection.yml  docker-build.yml  ecs-deploy.yml
config/: index-gemini.json  requirements.py  settings.py
data/regulations/: anssi_cyber_hygiene.txt  gdpr_principles.txt  gdpr_security_of_processing.txt  iso27001_access_control.txt  iso27001_information_security_policy.txt  nist_csf_identify_protect.txt
data/vector_store/faiss_index/: index.faiss  index.pkl
ecs/: task-definition.json
infra/: main.tf  variables.tf
services/ingestion/src/: lambda_function.py
src/: agent.py  ingestion.py  policy_analysis.py  prompts.py  retriever.py
src/ingestion/: Dockerfile
src/ingestion/src/: lambda_function.py  requirements.txt
src/ui/: components.py  styles.py
tests/unit/: test_agent.py  test_ingestion.py  test_policy_analysis.py  test_prompts.py  test_retriever.py
ui/: components.py  styles.py
