[project]
name = "Verity"
version = "0.1.0"
description = "AI Compliance Assistant"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.2.0",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.1.5",
    "langchain-text-splitters>=1.1.0",
    "matplotlib>=3.10.7",
    "pandas>=2.3.3",
    "plotly>=6.5.0",
    "pydeck>=0.9.1",
    "streamlit>=1.52.1",
    "streamlit-elements>=0.1.0",
    "streamlit-shadcn-ui>=0.1.19",
    "pypdf>=3.17.0",
    "python-docx>=1.1.0",
    "python-dotenv>=1.0.0",
    "openai>=1.0.0",
    "tiktoken>=0.5.0",
    "pdfplumber>=0.11.0",
    "chardet>=5.2.0",
    "google-generativeai>=0.8.6",
    "langchain-google-genai>=4.1.2",
    "faiss-cpu>=1.13.1",
    "requests-aws4auth>=1.3.1",
    "boto3>=1.42.17",
    "opensearch-py>=3.1.0",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "config*"]
